<?xml version="1.0"?>
<package format="2">
  <name>tcan_msgs</name>
  <version>0.0.1</version>
  <description>The tcan_msgs package</description>
  <maintainer email="pleemann@ethz.ch">Philipp Leemann</maintainer>
  <license>BSD</license>
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>
