<?xml version="1.0"?>
<package format="2">
  <name>tcan_pcan</name>
  <version>0.0.1</version>
  <description>The tcan package</description>
  <maintainer email="pleemann@ethz.ch">Philipp Leemann</maintainer>
  <license>Proprietary</license>
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>tcan</depend>
  <depend>pcan_driver</depend>
</package>
