<?xml version="1.0"?>
<package format="2">
  <name>tcan_pcanfd</name>
  <version>0.0.2</version>
  <description>Tcan driver for pcan fd driver API</description>
  <maintainer email="pleemann@ethz.ch">Philipp Leemann</maintainer>
  <license>Proprietary</license>
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>tcan</depend>
  <depend>tcan_can</depend>
  <depend>pcan_driver</depend>
</package>
