<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>tcan_usb</name>
  <version>0.2.0</version>
  <description>The tcan package</description>
  <maintainer email="simon.kerscher@mavt.ethz.ch">Simon Kerscher</maintainer>
  <license>MIT</license>
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  <author email="gehrinch@ethz.ch">Christian Gehring</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>message_logger</depend>
  <depend>tcan</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
